<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/rl_view"
    tools:context="hect.preciosapp.MainActivity">

    <Button
        android:id="@+id/ButtonMain1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/ButtonMain1" />

    <Button
        android:id="@+id/ButtonMain2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/ButtonMain2" />

    <Button
        android:id="@+id/ButtonMain3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/ButtonMain3" />
</LinearLayout>
